# ebay-kleinanzeigen-api-mcp

./: .env.server.example  .gitattributes  .gitignore  DOCKER_QUICKSTART.md  Dockerfile.mcp  README.MD  SERVER_DEPLOYMENT.md  START_HERE.md  docker-compose.server.yml  docker-compose.yml  pyproject.toml  quick_test.py  setup-uv.ps1  test_comprehensive.py  test_debug.py
src/kleinanzeigen_mcp/: __init__.py  client.py  server.py  types.py
src/kleinanzeigen_mcp/prompts/: __init__.py  workflows.py
src/kleinanzeigen_mcp/tools/: __init__.py  listings.py
tests/: README.md  conftest.py  test_client.py  test_simple.py
