[project]
name = "kleinanzeigen-mcp-server"
version = "1.0.0"
description = "MCP Server for eBay Kleinanzeigen - enables Claude to search and retrieve listings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.2",
    "playwright>=1.49.0",
    "httpx>=0.28.1",
    "starlette>=0.45.0",  # For SSE transport
    "uvicorn>=0.34.0",    # ASGI server for SSE mode
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
kleinanzeigen-mcp = "kleinanzeigen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kleinanzeigen_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests that hit real website (slow)",
]
# Default timeout for all tests (can be overridden per test)
timeout = 30

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
